# flora-ai

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  RESUME_AND_INTERVIEW.md  docker-compose.yml  flora_gateway.db  pyproject.toml
.github/workflows/: ci.yml
frontend/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/assistant/: page.tsx
frontend/app/diagnose/: page.tsx
frontend/app/health/: page.tsx
frontend/app/vision/: page.tsx
frontend/components/atmosphere/: Atmosphere.tsx
frontend/components/botanical/: Botanicals.tsx
frontend/components/brand/: Logo.tsx
frontend/components/layout/: PageHeader.tsx  SiteFooter.tsx  SiteHeader.tsx
frontend/components/modules/: Citations.tsx  HealthResult.tsx  ImageDropzone.tsx  Markdown.tsx  SpeciesResult.tsx
frontend/components/ui/: Aurora.tsx  Badge.tsx  Button.tsx  Card.tsx  Field.tsx  Meter.tsx  Reveal.tsx  Spinner.tsx
frontend/lib/: api.ts  motion.ts  types.ts  utils.ts
services/agent/: Dockerfile  README.md  requirements.txt
services/agent/floraagent/: __init__.py  agent.py  api.py  config.py  embeddings.py  eval.py  ingest.py  retriever.py  tools.py  vectorstore.py
services/agent/tests/: conftest.py  (+1 more)
services/dl/: Dockerfile  README.md  requirements.txt
services/gateway/: Dockerfile  README.md  requirements.txt
services/ml/: Dockerfile  README.md  requirements.txt
shared/: pyproject.toml
shared/flora_common/: __init__.py  logging.py  schemas.py
(+37 files in other folders)
